# ByExampleNoiseOpenGL

./: CMakeLists.txt  Gaussian.py  OT.ipynb  README.md  comparisons.md  gaussianize.py  image_processor.py  image_scaler.py  image_visualizer.py  inverse_gaussianize.py  lut_visualizer.py  requirements.txt
base/: application.cpp  application.h  camera.h  light.h  model.cpp  model.h  object3d.h  shader.cpp  shader.h  texture.cpp  texture.h
base/Staged/: CustomModel.h  Mesh.h
shader/: debug.fs  sample.fs  simple.fs  synth.fs  synth.vs  synth_alt.fs
src/: GUI.hpp  NoiseSynth.cpp  NoiseSynth.h  NoiseSynth.hpp  Precompute.hpp  RenderQuad.h  SceneRoaming.cpp  SceneRoaming.h  Screenshot.cpp  Setup.hpp  SynthBuffer.cpp  SynthBuffer.hpp  TextureDataFloat.hpp  main.cpp
src/utils/: CMakeLists.txt  LUTCompute.cpp  dbg.h  debugger.h  objLoader.h
